--- a/index.html
+++ b/index.html
@@ -241,9 +241,9 @@
         <h2>交换链接</h2>
         <p class="description" style="color: #ff3b30;">⚠️ 提示：前往站外链接时，请注意网址安全！</p>
         <div class="link-grid">
-            <a href="#https://qwipa.mysxl.cn/" class="download-link">
-                <span class="link-title">权威软件站</span>
-                <span class="link-note">深度合作伙伴</span>
+            <a href="http://apt.senpai114514.icu/" class="download-link">
+                <span class="link-title">cydia Sileo</span>
+                <span class="link-note">源推荐</span>
             </a>
             <a href="https:// ios.cilici.cn" class="download-link">
                 <span class="link-title">刺狸刺</span>
