--- a/index.html
+++ b/index.html
@@ -187,6 +187,8 @@
     <header>
         <h1>小黑苹果软件站</h1>
         <p class="slogan">“ 我们一直在努力！ ”</p>
+        <p>返回旧站：xhiosapp.mysxl.cn
+</p>
     </header>
 
     <div class="info-bar">
